# NASTRAN-95

./: .dockerignore  .gitignore  BUILD.md  BUILD_STATUS.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  Dockerfile.cloudrun  EXAMPLES.md  FORTRAN_MODERNIZATION_PLAN.md  INTEGRATION_STATUS.md  MODERNIZATION_SUMMARY.md  Makefile  NASTRAN95Config.cmake  PARSER_FIX_COMPLETE.md  PHASE3_MIGRATION_COMPLETE.md  PHASE3_PROGRESS.md  PROJECT_STATUS_SUMMARY.md  README.md  STATUS.md  TROUBLESHOOTING.md  file_categories.csv  files_needing_review.txt  migrate_sources.sh  test_rust_bridge.sh
cmake/: NASTRAN95Config.cmake.in
deploy/cloudrun/: README.md  entrypoint.sh  job.env.example  job.yaml  job_runner.py
docs/: BUILD_AND_TEST_SUMMARY.md  CONTRIBUTING.md  EXECUTION_FLOW_ANALYSIS.md  EXISTING_SOLVER_ABSTRACTION_FRAMEWORKS.md  MIGRATION_CHECKLIST.md  NASTRAN95_SOLVER_MODERNIZATION_ANALYSIS.md  NASTRAN_EXECUTION_FLOW.md  PARSER_FIX_OPTIONS.md  PETSC_INSTALLATION_GUIDE.md  QUICKSTART.md  REFACTORING_STATUS.md  RUNTIME_INITIALIZATION_ISSUES.md  RUST_BRIDGE_DEBUG_REPORT.md  RUST_PYTHON_FORTRAN_BRIDGE.md  SOLVER_ABSTRACTION_DESIGN.md  SOLVER_QUICK_REFERENCE.md  STUB_FUNCTIONS_STATUS.md  XCSA_FIX_COMPLETE.md  XCSA_MODERNIZATION_NOTES.md  nastran_call_flowchart.dot  nastran_execution_flow.dot
docs/refactoring/: AMG_CONSOLIDATION_ANALYSIS.md  BAR_CONSOLIDATION.md  IHEX_CONSOLIDATION.md  MATRIX_ASSEMBLY_CONSOLIDATION.md  MUMPS_BACKEND_INTEGRATION.md  PHASE2_TEMPLATE_SYSTEM.md  QUAD4_CONSOLIDATION.md  ROD_CONSOLIDATION.md  SESSION_SUMMARY_2026-02-09.md  STATIC_ANALYSIS_REFACTORING.md  TRIA3_CONSOLIDATION.md
etc/: nastran.conf.template
examples/: CMakeLists.txt  README.md
examples/input/: d01000a.inp  d01011a.inp  d01011c.inp  d01012a.inp  d01013a.inp  d01014a.inp  d01021a.inp  d01031a.inp  d01032a.inp  d01033a.inp  d01034a.inp  d01041a.inp  d01051a.inp  d01071a.inp  d01081a.inp  d01091a.inp  d01092a.inp  (+67 more)
mis/: PHASE3_PLAN.md  apdb.f  ascm01.f  ascm04.f  ascm05.f  ascm06.f  ascm07.f  comugv.f  cputim.f  dbase.f  dbmdia.f  desvel.f  dssize.f  endgtb.f  endsys.f  genpar.f  getstb.f  gfsma.f  inptt5.f  jacobd.f  nastim.f  normal.f  onetwo.f  outpt5.f  pexit.f  prolat.f  q8shpd.f  scan.f  sdcmps.f  sofut.f  strscn.f  t6shpd.f  tdate.f  trail.f  transp.f  tria3d.f  xsort.f  xsort2.f
nastran_parser_bridge/: Cargo.toml  INTEGRATION.md  build.sh  test_bridge.py
nastran_parser_bridge/src/: lib.rs
rf/: NASINFO
scratch/: README.md  USAGE.txt  d01000a.out  d01001a.out  d01011b.out  d01011c.out  d01012a.out  d01013a.out  d01014a.out  d01021a.out  d01021b.out  d01031a.out  d01032a.out  d01033a.out  d01034a.out  d01041a.out  d01051a.out  d01061a.out  d01062a.out  d01071a.out  d01081a.out  d01091a.out  d01092a.out  d01101a.out  d01111a.out  d01112a.out  d01121a.out  d01122a.out  d01131a.out  d01132a.out  d01133a.out  d01141a.out  d01151a.out  d01161a.out  d01171a.out  d02011a.out  d02021a.out  d02022a.out  d02023a.out  d02024a.out  (+98 more)
scripts/: TESTING_README.md  categorize_files.py  cleanup.sh  convert_to_modern_nastran.py  deep_categorize.py  generate_nastran_call_flowchart.py  generate_test_coverage_html.py  install_petsc.sh  migrate_files.py  migrate_files.sh  run_all_examples.sh  run_parallel.sh  run_quick_test.sh  start_webapp.sh  start_webapp_enhanced.sh  verify_generated.sh
src/analysis/: CMakeLists.txt  Makefile
src/blockdata/: CMakeLists.txt  Makefile
src/blockdata/init/: of5pbd.f
src/common/: CMakeLists.txt  Makefile  constants_module.f90  precision_module.f90
src/core/: CMakeLists.txt  Makefile
src/core/algorithms/: pressure_iteration_module.f90  spline_module.f90
src/core/utilities/: nastran_buffer_module.f90  nastran_constraint_module.f90  nastran_coord_module.f90  nastran_eqexin_module.f90  nastran_error_module.f90  nastran_search_module.f90  nastran_uset_module.f90
src/elements/: CMakeLists.txt  Makefile
src/elements/aero/: amg_ajj_module.f90  amg_cascade_subsonic_module.f90  amg_cascade_supersonic_module.f90  amg_transonic_module.f90
src/elements/beam/: bar_unified_module.f90  rod_unified_module.f90
src/elements/shell/: quad4_unified_module.f90  tria3_unified_module.f90
src/elements/solid/: ihex_unified_module.f90
src/legacy/: CMakeLists.txt  Makefile
src/legacy/mis/: README.md  ffread.f  finwrt.f
src/solvers/: CMakeLists.txt  Makefile
src/solvers/backends/: linalg_backend_mumps_module.f90
src/system/: CMakeLists.txt  Makefile
src/system/database/: ascm01.f  ascm05.f  ascm06.f  ascm07.f  endsys.f  xsem00.f
src/system/io/: cputim.f  nastim.f  tdate.f
src/system/platform/: nastrn.f
src/utilities/: CMakeLists.txt  Makefile
src/utilities/helpers/: rust_state_module.f90  semint.f  semint.f90
src/utilities/output/: sofut.f  strscn.f  xcsa.f90
src/utilities/parser/: case_ctrl_modern.f90  exec_ctrl_modern.f90  pynastran_bridge.py  python_fortran_bridge.f90  rust_bridge_interface.f90  xread.f
templates/: CMakeLists.txt  IHEX_TEST_RESULTS.md  QUAD4_TEST_RESULTS.md  TEMPLATE_TEST_RESULTS.md  TRIA3_TEST_RESULTS.md  bar_template.f90  create_ihex_templates.sh  ihex_template.f90  ihexs_template.f90  precision_macros.h  quad4_template.f90  rod_template.f90  tria3_template.f90
test_quick/: d01000a.nptp  d01000a.out
tests/: CMakeLists.txt  pynastran_test_results.txt  test_pynastran_all.py  validate_modified_vs_original.py
tests/src/: test_all_src_vs_original.py
tests/src/analysis/: test_all_analysis_vs_original.py
tests/src/blockdata/: test_all_blockdata_vs_original.py
tests/src/common/: test_all_common_vs_original.py
tests/src/core/: test_all_core_vs_original.py
tests/src/elements/: test_all_elements_vs_original.py
tests/src/legacy/: test_all_legacy_vs_original.py
tests/src/solvers/: test_all_solvers_vs_original.py
tests/src/system/: test_all_system_vs_original.py
tests/src/system/database/: test_xsem00_vs_original.py
tests/src/system/platform/: test_nastrn_vs_original.py
tests/src/utilities/: test_all_utilities_vs_original.py
tests/src/utilities/parser/: test_xread_vs_original.py
webapp/: README.md  __init__.py  main.py
(+247 files in other folders)
