# ==============================================================================
# NASTRAN-95 Unit Tests
# ==============================================================================
# Unit tests for NASTRAN-95 modules
#
# Future test framework integration (e.g., FRUIT, pFUnit)
# ==============================================================================

message(STATUS "Tests configured: ${CMAKE_CURRENT_SOURCE_DIR}")

# TODO: Add unit tests for:
# - Element stiffness matrix generation
# - Matrix assembly and factorization
# - Coordinate transformations
# - Load application
# - Eigenvalue solvers

# Placeholder for future test executables
# add_executable(test_element_stiffness test_element_stiffness.f90)
# target_link_libraries(test_element_stiffness nastran_elements)
# add_test(NAME element_stiffness COMMAND test_element_stiffness)

message(STATUS "No tests defined yet - add unit tests here")
